syntax = "proto2";

package membership;

message MemberUpdate {
    required string name = 1;
    required string ip = 2;
    required int32 port = 3;

    enum MemberStatus {
        UP = 0;
        DOWN = 1;
        SUSPECT = 2;
    }

    required MemberStatus status = 4;
    required int32 incarnation = 5;
}

message MemberFullState {
    enum ErrorCode {
        SUCCESS = 0;
        FAILURE = 1;
        REENTRY_REJECTED = 2;
    }
    required ErrorCode error = 1;
    repeated MemberUpdate states = 2;
}